--- a/add.html
+++ b/add.html
@@ -73,15 +73,17 @@
    <option value="CSE" name="bname">CSE</option>
    <option value="ECE" name="bname">ECE</option>
    <option value="ISE" name="bname">ISE</option>
+   <option value="ISE" name="bname">EEE</option>
+	
 </select> <br>
 
 
 <label> Branch id: </label>         
 <select name="bid" id="bid">
     <option value="" name="bid"></option>    
-    <option value="4BD21CSE" name="bid">4BD21CSE</option>
-    <option value="4BD21ECE" name="bid">4BD21ECE</option>
-    <option value="4BD21ISE" name="bid">4BD21ISE</option>
+    <option value="4BD21CSE" name="bid">4BD22CS</option>
+    <option value="4BD21ECE" name="bid">4BD22EC</option>
+    <option value="4BD21ISE" name="bid">4BD22IS</option>
  </select> <br>
 
   
