--- a/add.html
+++ b/add.html
@@ -74,6 +74,9 @@
    <option value="ECE" name="bname">ECE</option>
    <option value="ISE" name="bname">ISE</option>
    <option value="EEE" name="bname">EEE</option>
+   <option value="AIML" name="bname">AIML</option>
+   <option value="CV" name="bname">CV</option>
+   <option value="MEC" name="bname">MEC</option>
 	
 </select> <br>
 
@@ -81,9 +84,13 @@
 <label> Branch id: </label>         
 <select name="bid" id="bid">
     <option value="" name="bid"></option>    
-    <option value="4BD22CSE" name="bid">4BD22CS</option>
-    <option value="4BD22ECE" name="bid">4BD22EC</option>
-    <option value="4BD22ISE" name="bid">4BD22IS</option>
+    <option value="4BD22CS" name="bid">4BD22CS</option>
+    <option value="4BD22EC" name="bid">4BD22EC</option>
+    <option value="4BD22IS" name="bid">4BD22IS</option>
+    <option value="4BD22AI" name="bid">4BD22AI</option>
+    <option value="4BD22CV" name="bid">4BD22CV</option>
+    <option value="4BD22EE" name="bid">4BD22EE</option>
+    <option value="4BD22ME" name="bid">4BD22ME</option>
  </select> <br>
 
   
