--- a/addc.html
+++ b/addc.html
@@ -59,7 +59,9 @@
 <input type="text" name="name" size="15"/> <br>  
 
 <label> Type: </label>         
-<input type="text" name="type" size="15"/> <br> 
+<!-- <input type="text" name="type" size="15"/> -->
+
+	<br> 
 
 <label> Package: </label>         
 <input type="text" name="package" size="15"/> <br>  
