--- a/addc.html
+++ b/addc.html
@@ -60,8 +60,11 @@
 
 <label> Type: </label>         
 <!-- <input type="text" name="type" size="15"/> -->
-
-	<br> 
+<select name="type" id="type">
+   <option value="" name=""></option>  
+   <option value="Product" name="type">Product</option>    
+   <option value="service" name="type">service</option>
+</select><br> 
 
 <label> Package: </label>         
 <input type="text" name="package" size="15"/> <br>  
