--- a/addc.html
+++ b/addc.html
@@ -58,7 +58,7 @@
 <label> Company Name: </label>         
 <input type="text" name="name" size="15"/> <br>  
 
-<label> Type: </label>         
+<label> Company Type: </label>         
 <!-- <input type="text" name="type" size="15"/> -->
 <select name="type" id="type">
    <option value="" name=""></option>  
