--- a/studentregister.html
+++ b/studentregister.html
@@ -47,6 +47,15 @@
     </head>  
 
 <body>  
+ <div class="header">
+     <a href="BIET.JPG" class="logo">BIET PLACEMENT AND TRAINING CELL</a>
+      <div class="header-right">
+       <a class="active" href=""></a>
+       <a href="feedback.php">feedback</a>
+       <a href="home.php">logout</a>
+      </div>
+</div>
+	
 <br>  
 <br>  
 <div class="bordered">
