--- a/studentregister.html
+++ b/studentregister.html
@@ -5,6 +5,16 @@
         Student Register
         </title> 
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'> 
+<style type="text/css">
+	  .header {
+        overflow: hidden;
+        background-color:#0a0b36;
+        padding: 20px 10px;
+        font-family: 'Poppins';
+        font-size: 25px; 
+       }
+	  </style>
+	    
         <style>
             body{
                 font-family: 'Poppins';
