--- a/studentregister.html
+++ b/studentregister.html
@@ -13,6 +13,18 @@
         font-family: 'Poppins';
         font-size: 25px; 
        }
+	 .header a {
+        float: left;
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+        color:white;
+        }
+
 	  </style>
 	    
         <style>
