--- a/studentregister.html
+++ b/studentregister.html
@@ -100,7 +100,7 @@
       <div class="header-right">
        <a class="active" href=""></a>
        <a href="feedback.php">feedback</a>
-       <a href="home.php">logout</a>
+       <a href="home.php">Back</a>
       </div>
 </div>
 	
